# james-orcales

./: .envrc  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  NERD_CORNER.md  README.md  bootstrap.lua  build.go  clippy.toml  go.mod  go.work  install_golang.lua  install_golang.sh  lint.json
.cargo/: config.toml
.github/workflows/: ci.yml
big_bang/: .gitignore  README.md  big_bang.go  bootstrap.lua  go.mod  go.sum  stylua.toml
colejak/: LICENSE  README.md
colejak/assets/: ansi.json  lily58.json  zsa-voyager.json
colejak/symbols/: colejak
documentation/: bash_scripting_guidelines.md  predict_olympic_medalist.ipynb
dotfiles/: .bashrc  .profile  .zprofile  .zshenv  .zshrc
golang_snacks/: README.md  go.mod  test_all.go
home/: .envrc  .zprofile  .zshenv
invariant/: assertions_enabled.go  permanent.go
itlog/: itlog.go
lint/: ANTITHESIS.Swarm_Testing.md  Assertion_Enforcement.md  LICENSE.zlib.james_orcales  README.md  TIGER_STYLE.index_count_offset_size.html  go.mod  main.go
lint_rs/: Cargo.toml  README.md  unbounded_stdlib_audit.md
maddox/: go.mod  main.go  sampler_darwin.go  sampler_linux.go  sampler_unix.go
markdown_to_pdf/: go.mod  main.go
odin_http_server_from_scratch/: README.md
setup/: README.md  go.mod  main.go
shared/: README.md  go.mod  test_all.go
shared_rs/: Cargo.toml
sim/: time_virtual.go
sloc/: README.md  go.mod  main.go
sloc_ocaml/: README.md
sloc_rs/: BENCHMARK.md  Cargo.toml
snap/: snap.go
zig_pratt_parser_tutorial/: README.md  build.zig  build.zig.zon
zig_raylib_wayland/: README.md
(+318 files in other folders)
